# Nexus-Studio

./: .gitignore  Makefile  README.md  env.example  pyproject.toml
apps/frontend/: index.html  package-lock.json  package.json  replace_svgs.py  replace_svgs2.py  svgs.txt
apps/frontend/src/: App.svelte  app.css
apps/server/: README.md  index.html  server.py
compose/: local.yml
config/: mcp.json  models_registry.json
config/presets/: Gemma-4-12B-Daily-Drive.json  RecurrentGemma-9B-creative-thriller.json  default.json
configs/: 1b.yaml  270m.yaml  t5v2_270m.yaml
engines/recurrentgemma/: README.md  chat_ui.html  convert.py  generate.py  model.py  quantize.py  server.py
engines/recurrentgemma/scratch/: test_tool_calling.py
engines/t5v2/: README.md  check_emb_outputs.py  check_embed.py  check_norm.py  compare.py  compare_cache.py  compare_isolated_layer.py  compare_isolated_layer_bf16.py  compare_layer_details.py  compare_layers.py  compare_loop.py  compare_step1.py  compare_step2.py  compare_step4.py  convert.py  debug_layer.py  debug_norm.py  generate.py  inspect_cache.py  model.py  quantize.py  test_hf.py  train.py
migrations/: 000001_problemset.down.sql  000001_problemset.up.sql
mlx_cpp/: .gitignore  CMakeLists.txt  README.md  batch_generator.cpp  batch_generator.h  grpo_dataset.cpp  grpo_dataset.h  main.cpp  model.cpp  model.h  tokenizer.cpp  tokenizer.h  tokenizer_helper.py
scripts/: batched_rollout.py  benchmark_diverse_rollouts.py  benchmark_scaling.py  compare_performance.py  generate_sft_data.py  grpo_dataset.py  grpo_sample.py  infer_grpo.py  local_inference_runner.py  prepare_pretrain_data.py  sample_response.json  train_grpo.py  train_grpo_pipeline.py
scripts/convert/: convert_data.py  convert_gemma4.py
scripts/test/: test_g70m.py
scripts/train/: train_g70m.py  train_mlx.py  train_t5v2.py
scripts/utils/: mlx_batch_generator.py  patch_server.py  run.sh  run_model.py  run_t5v2.sh
