[project]
name = "llm"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "flax>=0.12.7",
    "hf-transfer>=0.1.9",
    "hf-xet>=1.5.0",
    "huggingface-hub>=1.16.4",
    "ipython>=9.13.0",
    "jupyter>=1.1.1",
    "mlx-lm>=0.31.3",
    "mlx-optiq[all]>=0.2.0",
    "mlx-vlm>=0.6.2",
    "peft>=0.19.1",
    "psycopg>=3.3.4",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.9.0",
    "trl>=1.5.1",
]
